...
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/rvIngredientList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAudioFile" />

    <TextView
        android:id="@+id/txtRecipename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
...
        android:adjustViewBounds="false"
        android:minHeight="@dimen/thumbnail_small_height"
        android:minWidth="@dimen/thumbnail_small_width"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txtIngredients"
        app:layout_constraintEnd_toStartOf="@+id/imgRecordAudioBtn"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecipename"
        app:srcCompat="@drawable/ic_audio_file" />

...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@id/btnFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredients">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnAddIngredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_square_border"
...
