...
    <string name="plus">+</string>
    <string name="householdid">Household ID</string>
    <string name="participantid">Participant ID</string>
    <string name="finalize_eo_notification_channel_name">Finalise Eating Occasion</string>
    <string name="finalize_eo_notification_channel_description">Notification to remind user to finalise eating occasions.</string>
    <string name="whattime"><u>Time you would like to finalise your day:\u0020</u> </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tick">\u2714</string>
    <string name="cross">\u2716</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="finalize">Finalise</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_name">Recipe Name</string>
...
    <string name="delete_item">Delete Item</string>
    <string name="delete_confirmation">Are you sure you want to delete this item?</string>
    <string name="householdmember_deleted">Household member deleted.</string>
    <string name="food_item_deleted">Food item deleted.</string>
    <string name="ingredient_deleted">Ingredient deleted.</string>
    <string name="edit">Edit</string>
    <string name="take_final_image">Take Final Image</string>
    <string name="take_final_image_message">Would you like to take a final image of the dish that you have just prepared?</string>
    <string name="title_notification_review">Review your day</string>
    <string name="title_notification_finalize_eating_occasion">Unfinalised Eating Occasion</string>
    <string name="notification_review_text">Click here to review your days food record.</string>
    <string name="recipe_locked">Recipe Locked</string>
    <string name="record_review_notification_channel_name">Record Review</string>
    <string name="record_review_notification_channel_description">Notification to prompt user to review their days Food Record</string>
    <string name="notification_unfinalized_eating_occasion_text">Click here to finalise your eating occasions.</string>
    <string name="instruction">Instruction</string>
    <string name="about">About</string>
    <string name="error_recipename">Recipe name required.</string>
    <string name="recipe_name_required">A recipe name is required. Please record the recipe name.</string>
    <string name="eat">Eat</string>
    <string name="eating">EATING</string>
    <string name="finalizeeat">Finalise Eating</string>
    <string name="cook">Cook</string>
    <string name="hmnotbreastfed">Household member is not breastfed.</string>
    <string name="noeatingoccasions">No eating occasions to finalise.</string>
...
