<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="au.edu.newcastle.jnc985.visida.activity.AudioRecordingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgHelp"
            android:layout_width="@dimen/icon_small_square"
            android:layout_height="@dimen/icon_small_square"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_btn_megaphone"
            android:visibility="invisible"
            android:elevation="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/audioRecorProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:max="90"
            android:progress="0"
            app:layout_constraintBottom_toTopOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAudioFile"
            android:layout_width="@dimen/icon_medium_large_square"
            android:layout_height="@dimen/icon_medium_large_square"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="false"
            android:background="@drawable/ic_btn_play"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/audioRecorProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar3"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnAudioAccept"
                android:layout_width="@dimen/icon_small_square"
                android:layout_height="@dimen/icon_small_square"
                android:background="@drawable/ic_btn_accept"
                android:backgroundTint="@color/green"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAudioDelete"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnRecordAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_btn_microphone"
                android:minHeight="80dp"
                android:minWidth="80dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAddText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAddText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_t"
                android:scaleX="0.75"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintStart_toEndOf="@+id/btnRecordAudio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAudioDelete"
                android:layout_width="@dimen/icon_small_square"
                android:layout_height="@dimen/icon_small_square"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_btn_cross"
                android:backgroundTint="@color/red"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnAudioAccept"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cancel"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
